...
                    <view key="view" contentMode="scaleToFill" id="Rzp-FZ-aQ5">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qqM-Lk-hL3">
                                <rect key="frame" x="346" y="98" width="48" height="40"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <action selector="searchButtonTapped" destination="7aO-t5-H6q" eventType="touchUpInside" id="Vu5-4f-jZB"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SXq-lL-3rx">
                                <rect key="frame" x="20" y="98" width="306" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="searchTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="DKX-Md-aHf"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
...
