...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Image Search"
        collectionView.register(UINib(nibName: "PreviewImageCell", bundle: nil), forCellWithReuseIdentifier: "previewImageCell")
        // For UI Testing purpose
        collectionView.accessibilityLabel = "imageSearchResultCollectionView"
        setupSearchResultViewModel()
        setupCollectionViewFlowLayout()
        setupActivityIndicator()
    }
    
    override func viewWillAppear(_ animated: Bool) {
...
